Fix carousel bug. Add styling and color scheme. -Fix carousel bug where items appeared too tall -Add ruled paper background to description frames -Change color scheme

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "application_color_palette";
 @import "carousel";
-@import "rounds"
+@import "navbar";
+@import "rounds";
+
+body {
+  background-image: url('paper.png');
+}
