--- a/app/assets/stylesheets/rounds.css.scss
+++ b/app/assets/stylesheets/rounds.css.scss
@@ -11,4 +11,31 @@ svg{
  width: 100%;
  overflow: hidden;
  padding-bottom: 100%;
+ border: 3px solid $color-rounds-border;
+}
+
+.description-container {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  background-image: url('notebook.png');
+  border: 3px solid $color-rounds-border;
+  padding-bottom: 100%;
+
+}
+
+.inner-description-container {
+
+  a {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    color: $color-rounds-description;
+    text-decoration: none;
+    font-size: 1.5em;
+    padding: 47% 10%;
+    text-align: center;
+  }
 }
